--- a/index.html
+++ b/index.html
@@ -21,66 +21,7 @@
 <html>
 <head>
     <title>Traveler's Notebook: Monster Tales</title>
-    <style>
-        @font-face {
-        font-family: "Amarante";
-        src: url(monsters/fonts/Amarante-Regular.ttf);
-        }
-        @font-face {
-        font-family: "Crimson Text";
-        src: url(monsters/fonts/CrimsonText-Roman.ttf);
-        }
-        @font-face {
-        font-family: "Handlee";
-        src: url(monsters/fonts/Handlee-Regular.ttf);
-        }
-        html,body {
-        width: 100%;
-        height: 100%;
-        align: center;
-        }
-        .center {
-        color: black;
-        text-align: center;
-        display: block;
-        }
-        li {
-        color: black;
-        }
-        img {
-        top: 15px;
-        right:15px;
-        position: absolute;
-        }
-        h4 {
-        font-size: 1.5em
-        }
-        h1 {
-        font-size: 4em;
-        margin: 25px;
-        }
-        h3 {
-        font-size: 2em;
-        }
-        #playn-root {
-        width: 100%;
-        height: 100%;
-        }
-
-        button {
-        background: #DAA89B;
-        border: #008868;
-        border-style: solid;
-        border-width: 2px;
-        }
-        body {
-        background-image: url("Page 11.png");
-        -webkit-background-size: cover;
-        -moz-background-size: cover;
-        -o-background-size: cover;
-        background-size: cover;
-        }
-    </style>
+    <link rel="stylesheet" type="text/css" href="index.css" />
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
