Remove in-line styles and format button

--- a/index.html
+++ b/index.html
@@ -38,11 +38,9 @@
 <body>
 <h3 class="center"> Traveler's Notebook </h3>
 <h1 class="center">Monster Tales</h1>
-<button style="position:relative; margin: 0px auto; display:block"
-        onclick="location.href='game.html'">Play the Game!
-</button>
+<p><button class="action-button">Play the Game!</button></p>
 <img src="ESRB.png">
-<h4 style="color:black">ABOUT</h4>
+<h4>ABOUT</h4>
 <p class="center"> Studio 368 consists of an interdisciplinary team of ten students
     representing Animation, Computer Science, Creative Writing, Philosophy, and Telecommunication majors and one faculty
     mentor. We work together in a studio space three times a week in two hour
@@ -54,21 +52,21 @@
 <p class="center">
     We recommend at least a 4th grade reading level.
 </p>
-<h4 style="color:black">GOALS</h4>
-<p style="color:black">Our three main goals for the semester were to create a game that:</p>
+<h4>GOALS</h4>
+<p>Our three main goals for the semester were to create a game that:</p>
 <ol>
     <li>Promotes cultural empathy</li>
     <li>Incorporates narrative as the driving factor in gameplay</li>
     <li>Includes a technology component (digital or hybrid game design)
     </li>
 </ol>
-<p style="color:black">Our three secondary goals were to create a game that:</p>
+<p>Our three secondary goals were to create a game that:</p>
 <ol>
     <li>Encourages cooperative play</li>
     <li>Supports a variety of reading levels</li>
     <li>Develops oratory skills</li>
 </ol>
-<h4 style="color:black">STUDIO 368</h4>
+<h4>STUDIO 368</h4>
 <ul>
     <li>Nicholas Boyer</li>
     <li>Ashley Cox</li>
