Change styles and add team image

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
     </script>
 </head>
 <body>
-<h3 class="center"> Traveler's Notebook </h3>
-<h1 class="center">Monster Tales</h1>
-<p><button class="action-button">Play the Game!</button></p>
-<img src="ESRB.png">
+<div class="container">
+<h1 class="center">Traveler's&nbsp;Notebook: Monster&nbsp;Tales</h1>
+<div class="center"><button class="action-button">Play the Game!</button></div>
+
 <h4>ABOUT</h4>
 <p class="center"> Studio 368 consists of an interdisciplinary team of ten students
     representing Animation, Computer Science, Creative Writing, Philosophy, and Telecommunication majors and one faculty
@@ -67,6 +67,7 @@
     <li>Develops oratory skills</li>
 </ol>
 <h4>STUDIO 368</h4>
+<img class="right" src="image/team1.jpg" />
 <ul>
     <li>Nicholas Boyer</li>
     <li>Ashley Cox</li>
@@ -92,5 +93,7 @@
         </ul>
     </li>
 </ul>
+<p><img id="rating" src="ESRB.png" /></p>
+</div>
 </body>
 </html>
