Link button to game

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 <body>
 <div class="container">
 <h1 class="center">Traveler's&nbsp;Notebook: Monster&nbsp;Tales</h1>
-<div class="center"><button class="action-button">Play the Game!</button></div>
+<div class="center"><button id="play-button" onclick="location.href='/monsters'">Play the Game!</button></div>
 
 <h4>ABOUT</h4>
 <p class="center"> Studio 368 consists of an interdisciplinary team of ten students
