--- a/index.html
+++ b/index.html
@@ -41,32 +41,15 @@
 <div class="center"><button id="play-button" onclick="location.href='/monsters'">Play the Game!</button></div>
 
 <h4>ABOUT</h4>
-<p class="center"> Studio 368 consists of an interdisciplinary team of ten students
-    representing Animation, Computer Science, Creative Writing, Philosophy, and Telecommunication majors and one faculty
-    mentor. We work together in a studio space three times a week in two hour
-    chunks, for one semester. Instead of dividing tasks based on a person&#39;s skill set, we instead
-    encourage members of our team to work on a volunteer basis, choosing what parts of the process they would like to
-    pursue. Tasks include writing copy, generating code, playtesting, debugging, designing font stacks and color
-    palettes, creating art, etc.
+<p class="center"> Traveler’s Notebook: Monster Tales is a two-player narrative-driven game where 
+players are authors who are traveling the world, encountering monsters from various cultures, in order to get inspiration for their stories. When it is a player’s turn, they select a location and choose how they want to react to the monster with which they have come face-to-face. The other player then reads to them the tale of their encounter and they are able to choose whether they would like to exercise one of their skills. Through these encounters, players can gain additional skills, as well as inspiration points.The first player to 100 inspiration points wins! 
 </p>
 <p class="center">
     We recommend at least a 4th grade reading level.
 </p>
-<h4>GOALS</h4>
-<p>Our three main goals for the semester were to create a game that:</p>
-<ol>
-    <li>Promotes cultural empathy</li>
-    <li>Incorporates narrative as the driving factor in gameplay</li>
-    <li>Includes a technology component (digital or hybrid game design)
-    </li>
-</ol>
-<p>Our three secondary goals were to create a game that:</p>
-<ol>
-    <li>Encourages cooperative play</li>
-    <li>Supports a variety of reading levels</li>
-    <li>Develops oratory skills</li>
-</ol>
 <h4>STUDIO 368</h4>
+<p> We are a multidisciplinary team of ten undergraduate students representing Animation, Computer Science, Creative Writing, Philosophy, and Telecommunication majors. We are working with a faculty mentor to investigate how to promote cultural empathy in a narrative-driven digital game. 
+</p>
 <img class="right" src="image/team1.jpg" />
 <ul>
     <li>Nicholas Boyer</li>
@@ -76,7 +59,7 @@
     <li>Jessica Lohse</li>
     <li>Jack McGinnis</li>
     <li>Lucas Miller</li>
-    <li>Kay Rittichier</li>
+    <li>Kaley Rittichier</li>
     <li>Josh Schoen</li>
     <li>Brennan Wade</li>
     <li>Caleb Woods</li>
