--- a/index.html
+++ b/index.html
@@ -4,12 +4,12 @@
   ~
   ~ This file is part of monsters
   ~
-  ~ monsters is free software: you can redistribute it and/or modify
+  ~ Traveler's Notebook: Monster Tales is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
   ~ the Free Software Foundation, either version 3 of the License, or
   ~ (at your option) any later version.
   ~
-  ~ monsters is distributed in the hope that it will be useful,
+  ~ Traveler's Notebook: Monster Tales is distributed in the hope that it will be useful,
   ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
   ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
   ~ GNU General Public License for more details.
@@ -21,7 +21,7 @@
 <html>
 <head>
     <title>Traveler's Notebook: Monster Tales</title>
-    <link rel="stylesheet" type="text/css" href="index.css" />
+    <link rel="stylesheet" type="text/css" href="index.css"/>
     <meta name="apple-mobile-web-app-capable" content="yes"/>
     <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -31,52 +31,59 @@
 
   ga('create', 'UA-11642955-19', 'auto');
   ga('send', 'pageview');
-
-
     </script>
 </head>
 <body>
 <div class="container">
-<h1 class="center">Traveler's&nbsp;Notebook: Monster&nbsp;Tales</h1>
-<div class="center"><button id="play-button" onclick="location.href='/monsters'">Play the Game!</button></div>
+    <h1 class="center">Traveler's&nbsp;Notebook: Monster&nbsp;Tales</h1>
+    <div class="center">
+        <button id="play-button" onclick="location.href='/monsters'">Play the Game!</button>
+    </div>
 
-<h4>ABOUT</h4>
-<p class="center"> Traveler’s Notebook: Monster Tales is a two-player narrative-driven game where 
-players are authors who are traveling the world, encountering monsters from various cultures, in order to get inspiration for their stories. When it is a player’s turn, they select a location and choose how they want to react to the monster with which they have come face-to-face. The other player then reads to them the tale of their encounter and they are able to choose whether they would like to exercise one of their skills. Through these encounters, players can gain additional skills, as well as inspiration points.The first player to 100 inspiration points wins! 
-</p>
-<p class="center">
-    We recommend at least a 4th grade reading level.
-</p>
-<h4>STUDIO 368</h4>
-<p> We are a multidisciplinary team of ten undergraduate students representing Animation, Computer Science, Creative Writing, Philosophy, and Telecommunication majors. We are working with a faculty mentor to investigate how to promote cultural empathy in a narrative-driven digital game. 
-</p>
-<img class="right" src="image/team1.jpg" />
-<ul>
-    <li>Nicholas Boyer</li>
-    <li>Ashley Cox</li>
-    <li>Paco DeArmond</li>
-    <li>Paul Gestwicki</li>
-    <li>Jessica Lohse</li>
-    <li>Jack McGinnis</li>
-    <li>Lucas Miller</li>
-    <li>Kaley Rittichier</li>
-    <li>Josh Schoen</li>
-    <li>Brennan Wade</li>
-    <li>Caleb Woods</li>
-</ul>
-<p>
-    Special thanks to:
-</p>
-<ul>
-    <li><a href="http://www.munciepubliclibrary.org/cc/">Connection Corner</a></li>
-    <li><a href="http://www.bsu.edu">Ball State University</a>, especially:
-        <ul>
-            <li><a href="http://www.bsu.edu/csh">College of Sciences and Humanities</a></li>
-            <li><a href="http://www.cs.bsu.edu">Department of Computer Science</a></li>
-        </ul>
-    </li>
-</ul>
-<p><img id="rating" src="ESRB.png" /></p>
+    <h4>ABOUT</h4>
+    <p class="center"> Traveler’s Notebook: Monster Tales is a two-player narrative-driven game where
+        players are authors who are traveling the world, encountering monsters from various cultures, in order to get
+        inspiration for their stories. When it is a player’s turn, they select a location and choose how they want to
+        react to the monster with which they have come face-to-face. The other player then reads to them the tale of
+        their encounter and they are able to choose whether they would like to exercise one of their skills. Through
+        these encounters, players can gain additional skills, as well as inspiration points.The first player to 100
+        inspiration points wins!
+    </p>
+    <p class="center">
+        We recommend at least a 4th grade reading level.
+    </p>
+    <h4>STUDIO 368</h4>
+    <p> We are a multidisciplinary team of ten undergraduate students representing Animation, Computer Science, Creative
+        Writing, Philosophy, and Telecommunication majors. We are working with a faculty mentor to investigate how to
+        promote cultural empathy in a narrative-driven digital game.
+    </p>
+    <img class="right" src="image/team1.jpg"/>
+    <ul>
+        <li>Nicholas Boyer</li>
+        <li>Ashley Cox</li>
+        <li>Paco DeArmond</li>
+        <li>Paul Gestwicki</li>
+        <li>Jessica Lohse</li>
+        <li>Jack McGinnis</li>
+        <li>Lucas Miller</li>
+        <li>Kaley Rittichier</li>
+        <li>Josh Schoen</li>
+        <li>Brennan Wade</li>
+        <li>Caleb Woods</li>
+    </ul>
+    <p>
+        Special thanks to:
+    </p>
+    <ul>
+        <li><a href="http://www.munciepubliclibrary.org/cc/">Connection Corner</a></li>
+        <li><a href="http://www.bsu.edu">Ball State University</a>, especially:
+            <ul>
+                <li><a href="http://www.bsu.edu/csh">College of Sciences and Humanities</a></li>
+                <li><a href="http://www.cs.bsu.edu">Department of Computer Science</a></li>
+            </ul>
+        </li>
+    </ul>
+    <p><img id="rating" src="ESRB.png"/></p>
 </div>
 </body>
 </html>
