Add research update with link to GLS session

--- a/index.html
+++ b/index.html
@@ -52,6 +52,14 @@
     <p class="center">
         We recommend at least a 4th grade reading level.
     </p>
+
+    <h4>RESEARCH UPDATE</h4>
+    <p>
+        Members of Studio 368 will be presenting a paper about this project at
+        <a href="http://glsconference.org/">GLS 12</a>. See more information on our
+        session <a href="https://gameslearningsociety12confe2016.sched.org/event/7Te6/empathy-cultural-perspectivity">here!</a>
+    </p>
+
     <h4>STUDIO 368</h4>
     <p> We are a multidisciplinary team of ten undergraduate students representing Animation, Computer Science, Creative
         Writing, Philosophy, and Telecommunication majors. We are working with a faculty mentor to investigate how to
