--- a/index.html
+++ b/index.html
@@ -53,12 +53,20 @@
         We recommend at least a 4th grade reading level.
     </p>
 
-    <h4>RESEARCH UPDATE</h4>
+    <h4>RESEARCH</h4>
     <p>
-        Members of Studio 368 will be presenting a paper about this project at
-        <a href="http://glsconference.org/">GLS 12</a>. See more information on our
-        session <a href="https://gameslearningsociety12confe2016.sched.org/event/7Te6/empathy-cultural-perspectivity">here!</a>
+      Members of Studio 368 presented our research at <a href="http://glsconference.org/">GLS 12</a>.
+      The paper will be published in the conference proceedings, and in the meantime,
+      you can download it here:
     </p>
+    <blockquote>
+      <a href="gls.pdf">
+      Paul Gestwicki, Kaley Rittichier, and Austin DeArmond.
+      &ldquo;Culture-narration games: a definition and pilot study,&rdquo;
+      in <i>Proceedings of 12th Conference on Games+Learning+Society</i>,
+      2016. ETC Press (to be published).
+      </a>
+    </blockquote>
 
     <h4>STUDIO 368</h4>
     <p> We are a multidisciplinary team of ten undergraduate students representing Animation, Computer Science, Creative
