Add license and link to sources

--- a/index.html
+++ b/index.html
@@ -87,6 +87,15 @@
         <li>Brennan Wade</li>
         <li>Caleb Woods</li>
     </ul>
+
+    <h4>Source Code</h4>
+    <p>
+        This is free software licensed under 
+        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>,
+        and the source code is available 
+        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">on GitHub</a>.
+    </p>
+    <h4>Acknowledgements</h4>
     <p>
         Special thanks to:
     </p>
