Fix source code link

--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
         This is free software licensed under 
         <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">GPLv3</a>,
         and the source code is available 
-        <a href="https://www.gnu.org/licenses/gpl-3.0.en.html">on GitHub</a>.
+        <a href="https://github.com/studio-368/monsters">on GitHub</a>.
     </p>
     <h4>Acknowledgements</h4>
     <p>
